# InksyncPro

./: .fletignore  .gitignore  806290e_CBZ.swift  806290e_CBZ_utf8.swift  806290e_CM.swift  806290e_PDF.swift  README.md  advanced_10_text_injection.epub  advanced_11_reflowable_image_test.epub  advanced_12_reflowable_css_hack.epub  advanced_13_sao_mimic.epub  advanced_14_reflowable_svg.epub  advanced_1_real_jpeg_valid_epub3.epub  advanced_2_kcc_div_image_no_svg.epub  advanced_3_no_viewport_meta.epub  advanced_4_strict_mimetype_compression.epub  advanced_5_real_image_test.epub  advanced_7_reflowable_text_test.epub  advanced_8_wolverine_mimic.epub  advanced_9_wolverine_pure.epub  apply_fixes.ps1  apply_fixes.py  apply_fixes_10.ps1  apply_fixes_11.ps1  apply_fixes_12.ps1  apply_fixes_13.ps1  apply_fixes_14.ps1  apply_fixes_15.ps1  apply_fixes_16.ps1  apply_fixes_17.ps1  apply_fixes_18.ps1  apply_fixes_19.ps1  apply_fixes_2.ps1  apply_fixes_20.ps1  apply_fixes_3.ps1  apply_fixes_4.ps1  apply_fixes_5.ps1  apply_fixes_6.ps1  apply_fixes_7.ps1  apply_fixes_8.ps1  (+66 more)
ComicToPDF/: .gitignore  .swiftlint.yml  CBZToEPUBConverter_old.swift  CBZToEPUBConverter_working.swift  Config.xcconfig  Info.plist  comments.json  comments.txt  diff.patch  diff_utf8.patch  fix_urls.py  git_log.txt  mykey.key  patch_empty_catch.ps1  patch_empty_catch.py  project.yml  temp_cm_logic.swift  temp_old_conversion.swift  (+1 more)
InksyncDesktop/src-tauri/: Cargo.toml  tauri.conf.json
InksyncDesktop/src-tauri/icons/: icon.icns
InksyncDesktop/src-tauri/src/: discovery.rs  main.rs  protocol.rs  server.rs
(+869 files in other folders)
