[package]
name = "inksync-desktop"
version = "0.1.0"
description = "Inksync Desktop Companion"
authors = ["Inksync Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.30", features = ["full"] }
axum = { version = "0.6", features = ["ws", "multipart"] }
tower-http = { version = "0.4", features = ["cors", "fs"] }
mdns-sd = "0.9"
rusqlite = { version = "0.29", features = ["bundled"] }
notify = "6.0"
uuid = { version = "1.4", features = ["v4"] }
zip = "0.6"
tar = "0.4"
dirs = "5.0"
local-ip-address = "0.5"
crossbeam-channel = "0.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
